# tim

./: README.md  pyproject.toml
tim/: __init__.py  constants.py  event.py  gui.py  main.py  project.py  tim.py  time.py
tim/static/css/: app.tcss
